--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 
     <body>
         <div class="text">
-            <b>hrajixweb.cz - Web mladého programátora, který dělá stránky.</b>
+            <b>hrajix.github.io/booboo.github.io/ - Web mladého programátora, který dělá stránky.</b>
         </div>
 
         	
