--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
         <div class="butt">
             <h1>Zde se můžete překliknout</h1>
             <button onclick="scrollWin()" class="button"><span>Naše služby</span></button>
-            <button onclick="location.href='#'" class="button2"><span>O nás</span></button>
+            <button onclick="location.href='#'" class="button2"><span>O mně</span></button>
         </div>
 
 
